--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <img src="/venue_booking_logo.jpg" alt="Venue Booking Logo" />
+    <link rel="icon" type="image/jpeg" href="/venue_booking_logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Booking</title>
   </head>
